# servicekit-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: docker-build.yml
.sqlx/: query-046eb5cd870982056b3116d1d9a299b81ce6e1361898e84934b865162bdea1ec.json  query-36190502c805ebabda52cd6ae731841dcca84aac9ce3200dafe8486e9fed6131.json  query-3ef3e9b4f50ddb566820ff00e73ae96d6d7f2f4f797f9dfc3d6677363efb3207.json  query-46784699d27a07d69e637bca08905ece1db0ec365129fd4129288e9564bc40f0.json  query-4a0d680af42c71eb8f9114aeff02b842131ffa310a72a529326d741730a5465e.json  query-51fb51f67e63f10ea30bd0acb2a1b517430d75e42a18b62192af91e5973bda5f.json  query-56e68ae0de87c80e85046e036bf395fb75994d9974924f26d1f140c5761cd791.json  query-652ef8a3e2007fcbfcadc9042f10de39e47a1456adef21d468ae8057369e1ea0.json  query-6d16175b1d748cdb7ed87d066a8d7a0c3444e53c890d54dc3a6092114e03b14f.json  query-7cd298d13ead3ce61c36f317f34959597362fb41ca7833dc570b3b0ccbf30d1d.json  query-7e68f1bc38f4f48bbc0b18b1a988e3ce67d927a3f1d54e0bfbcee2423dd3c01b.json  query-9c9387607bd8dc3b0e2967c6c50f1d5817975611a7716294dbaf03baef593523.json  query-affb3c3f424e342bb7c7cb320e519a22dee2af3f15e66c3239aec6ab69e0df7f.json  query-b6f11cd9f64d0164088fc9874f62cb05a39c627827b4e3b86e9a85e41d85ed12.json  query-cb62e745e3703f506df297a72b86d4e2f73479c5c3554e4955ba85d48a335a62.json  query-ccc130ec19c593f64d9bd15ce0071481096793d709ec1392ad88c3333cb86eb7.json  query-d8bf6b5d66599813e20fe6e03002c89f7acc3e101479c799865c27d1a7bea6f6.json  query-e930e888d24b3e85c9b7b99047ae285ed680012d8087bc58c0646757e62eb0bd.json  query-f15558dbbbb00cce855bbfaa25c5661497361bcd797551e04b50c1b08343fd86.json
config/: default.toml  dev.toml  release.toml
k8s/: servicekit-deployment.yaml  servicekit-service.yaml
queries/: archive.sql  archive_sc.sql  classes.sql  classes_sc.sql  lecturers.sql  lecturers_sc.sql  refresh_mc_org_show.sql  refresh_mc_user_ztk.sql  trainings.sql  trainings_sc.sql  trains.sql  trains_sc.sql
src/: config.rs  context.rs  lib.rs  main.rs  scheduler.rs  web.rs
src/binlog/: mod.rs  org_processor.rs  processor.rs  user_processor.rs
src/db/: mod.rs  mysql_pool.rs  pool.rs  updaters.rs
src/logging/: mod.rs
src/mappers/: archiving_mss_mapper.rs  mod.rs
src/models/: mod.rs  org.rs  psn_class.rs  push_result.rs  train.rs
src/parsers/: mod.rs  push_result_parser.rs
src/schedule/: base_psn_push.rs  basepsn_push.rs  binlog_sync.rs  composite_task.rs  mod.rs  psn_archive_push.rs  psn_archive_sc_push.rs  psn_class_push.rs  psn_class_sc_push.rs  psn_lecturer_push.rs  psn_lecturer_sc_push.rs  psn_training_push.rs  psn_training_sc_push.rs  psnarchive_push.rs  psnarchive_sc_push.rs  psnlecturer_push.rs  psnlecturer_sc_push.rs  psntrain_push.rs  psntrain_sc_push.rs  psntraining_push.rs  psntraining_sc_push.rs  push_executor.rs  scheduler.rs  task.rs  task_scheduler_manager.rs
src/sql/: mod.rs  train_query.sql
src/utils/: clickhouse_client.rs  gateway_client.rs  gateway_types.rs  mod.rs  mss_client.rs  mysql_client.rs  process_error.rs  redis.rs
src/web/: binlog_handlers.rs  handlers.rs  mod.rs  models.rs  mss_handlers.rs  server.rs
static/: index.html
tests/: gateway_integration_test.rs
