[package]
name = "servicekit"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
tokio = { version = "1.45", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "rust_decimal",
] }
cron = "0.15.0"
rust_decimal = { version = "1.37", features = ["serde"] }

[[bin]]
name = "servicekit"
path = "src/main.rs"
