[package]
name = "servicekit"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
tokio = { version = "1.45", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
# Tracing 生态系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
] } # env-filter 用于从环境变量控制日志级别，fmt 用于格式化输出
tracing-appender = "0.2" # 用于文件输出和轮转
tracing-log = "0.2" # 将 log::* 宏桥接到 tracing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.37", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "rust_decimal",
] }
cron = "0.15.0"
tokio-cron-scheduler = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
config = "0.15"

mockito = "1.7"    # 用于模拟 HTTP 请求
tokio-test = "0.4" # 用于在测试中更方便地运行异步代码

clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs.git", branch = "async-await" }

futures = "0.3"

[[bin]]
name = "servicekit"
path = "src/main.rs"
