[package]
name = "servicekit"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
tokio = { version = "1.47", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
# Tracing 生态系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
] } # env-filter 用于从环境变量控制日志级别，fmt 用于格式化输出
tracing-appender = "0.2" # 用于文件输出和轮转
logroller = "0.1" # 由于tracing-appender还不支持本地时区轮转，logroller支持本地时区轮转
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.37", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "rust_decimal",
] }
chrono-tz = "0.10.4"
tokio-cron-scheduler = "0.14.0"
uuid = { version = "1.18.0", features = ["v4"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
config = "0.15"

clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs.git", branch = "async-await" }
futures = "0.3"

redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
itertools = "0.14.0"
thiserror = "2"
regex = "1"
[[bin]]
name = "servicekit"
path = "src/main.rs"
